Removed content and placed in programming resume file, edited list of pages.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,69 +3,16 @@ pageable: true
 per_page: 10
 ---
 
-<div id="intro" style="background-position: 50% -8px;" class="img-responsive">
-  <div class="story">
-    <div class="float-left"> 
-      
-    </div>
-  </div>
-</div>
 
-<div class="introduction" style="background-position: 50% 52px;">
-  <h2 class="name-tag">Jacquelyn</h2>
-</div>
-<div id="second" style="background-position: 50% 45px;">
-<!--   <div class="story">
-    <div class="bg" style="background-position: 50% 206px;"></div>
-    <div class="float-right"> 
-      <h2>Welcome to Adventures in Programming</h2>
-      <p>This is a blog made by me, Jacquelyn, to track my progress as I learn how to code and make awesome things with what I learn.</p>
-    </div>
-  </div> -->
-</div>
-<!-- <div id="third" style="background-position: 50% 184px;">
-  <div class="story">
-    <div class="float-left">
-      <h2>Learn with Me!</h2>
-      <p><%= link_to 'Click here to follow the girl with the hat...', '/adventures.html' %></p>
-    </div>
-  </div>
-</div> -->
 
-<div class="introduction" style="background-position: 50% 52px">
-  <p class="homepage-description">This is a blog I created to document my learning and experience in programming. I have been practicing self-study, along with assistance from great friends and programmers and everyday I continue to learn more.</p>
-</div>
-
-<div id="third" style="background-position: 50% 50px;">
-</div>
-
-<div class="introduction" style="background-position: 50% 52px">
-  <p class="homepage-description">My goal is to be able to understand all aspects of website creation, from frontend to backend to design to testing. I am looking forward to expanding my knowledge and experience, but take a look at my <%= link_to 'portfolio', '/resume.html' %> for information on where I am currently in my adventures in programming.</p>
-</div>
-
-<div id="fifth" style="background-position: 50% 50px;">
-</div>
-
-<div class="introduction" style="background-position: 40% 0px;">
-  <div class="story">
-    <div class="footer">
-      <div class="row">
-        <div class="col-md-8 col-xs-12"> 
-          <img class="img-responsive" id="sunglasses" src="images/home/sunglasses.jpg" style="max-height: 300px; float:center;">
-        </div>
-        <div class="col-md-4 col-xs-12 footer-text"> 
-          <p class="footer">Jacquelyn Carver</p>
-          <p class="footer">Age: 26</p>
-          <p class="footer">Location: Jersey City, NJ</p>
-          <p class="footer">Take a look at:</p>
           <ul>
             <li><p class="footer"><%= link_to 'Blogs & Things', '/blog_list.html' %></p></li>
             <li><p class="footer"><%= link_to 'My Portfolio', '/resume.html' %></p></li>
             <li><p class="footer"><%= link_to 'Bookmarks', 'bookmarks.html' %></p></li>
+            <li><p class="footer"><%= link_to 'Programming', 'programming_resume.html' %></p></li>
+            <li><p class="footer"><%= link_to 'General', 'general_resume.html' %></p></li>
+            <li><p class="footer"><%= link_to 'Yoga', 'yoga_resume.html' %></p></li>
+            <li><p class="footer"><%= link_to 'About Me', 'about.html' %></p></li>
           </ul>
-        </div>                  
-      </div>
-    </div>
-  </div>
-</div>
+ 
 
