Added about me content.

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -4,6 +4,11 @@
 			<h1>About Me</h1>
 		</div>
 	</div>
+	<div class="row about_img_row1">
+		<div class="col-sm-12">
+			<img src="../images/home/pstrip2.jpg" class="img-responsive"/>
+		</div>
+	</div>
 	<div class="row about_info_row">
 		<div class="col-sm-12">
 			<p>I have lived most of my life on the east coast, being born in Yonkers, New York and then moving to Old Tappan, New Jersey when I was four. I lived in Hawaii briefly, staying there over the summer growing up and then attending college at the University of Hawaii at Manoa from 2005 - 2009, after which I stayed in Hawaii for another year because, understandably, it's hard to find a good reason to stop living in paradise. After Hawaii, I also lived in Alexandria, Virginia, just outside of Washington D.C. for about three years.</p>
@@ -15,8 +20,11 @@
 		</div>
 	</div>
 	<div class="row about_info_row">
-		<div class="col-sm-12">
+		<div class="col-sm-6">
 			<p>Eventually I decided to move back to New Jersey and began to take an interest in computer programming. I began taking courses online on HTML, CSS, Javscript, and Ruby. I started working with MFRW Design as a frontend developer and executive assistant. Eventually, I began contract programming work for Rails Dog through MFRW Design and started experiencing the intricacies of remote work with a large company. Programming gave me the freedom and finacial stability that allowed me to travel to Australia, where I was fortunate enough to live for three months, just outside of Melbourne.</p>
+		</div>
+		<div class="col-sm-6">
+			<img src="../images/home/yoga_strip1.jpg" class="img-responsive yoga_strip"/>
 		</div>
 	</div>
 	<div class="row about_info_row">
