Added nessecary links and removed unused ones.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,13 +6,11 @@ per_page: 10
 
 
           <ul>
-            <li><p class="footer"><%= link_to 'Blogs & Things', '/blog_list.html' %></p></li>
-            <li><p class="footer"><%= link_to 'My Portfolio', '/resume.html' %></p></li>
-            <li><p class="footer"><%= link_to 'Bookmarks', 'bookmarks.html' %></p></li>
             <li><p class="footer"><%= link_to 'Programming', 'programming_resume.html' %></p></li>
             <li><p class="footer"><%= link_to 'General', 'general_resume.html' %></p></li>
             <li><p class="footer"><%= link_to 'Yoga', 'yoga_resume.html' %></p></li>
             <li><p class="footer"><%= link_to 'About Me', 'about.html' %></p></li>
+            <li><p class="footer"><%= link_to 'Contact Me', 'contact.html' %></p></li>
           </ul>
  
 
