--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -7,6 +7,7 @@
 @import 'animations';
 @import 'resume';
 @import 'about';
+@import 'contact';
 
 
 
@@ -66,75 +67,6 @@ div#blog-page {
 	  					text-decoration: none;
 	  				}
 				}
-			}
-		}
-	}
-}
-
-//CONTACT ME >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-
-%contact-font {
-	// color: darken(#DB70DB, 20%);
-	// color: #f3ece2;
-	color: black;
-	// text-shadow: 1px 1px #f3ece2;
-	text-align: left;
-	font-weight: bold;
-	font-family: 'Futura', sans-serif;
-}
-
-%contact-background {
-	background: -webkit-linear-gradient(#DB70DB, #f3ece2); /* For Safari 5.1 to 6.0 */
-	background: -o-linear-gradient(#DB70DB, #f3ece2); /* For Opera 11.1 to 12.0 */
-	background: -moz-linear-gradient(#DB70DB, #f3ece2); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(#DB70DB, #f3ece2); /* Standard syntax */
-	opacity: 0.5;
-	border-radius: 10px; 
-	@media(max-width: 498px) {
-		opacity: 0.75;
-	}
-}
-
-div#contact {
-	background: image-url("images/home/purple_tree2.jpg") 50% 0 no-repeat fixed;
-	background-color: gray;
-	background-size: cover;
-	height: 900px;
-	width: 100%;
-	position: fixed;
-	div.row.contact {
-		margin: 100px 20px;
-		h1.contact {
-			@extend %contact-font;
-			font-size: 20px;
-			padding: 20px 40px;
-			@extend %contact-background;
-		}
-	}
-	div.row.contact-two {
-		@extend %contact-font;
-		margin-top: -80px;
-		margin-left: -60px;
-		h3.contact {
-			@extend %contact-background;
-			font: 400 40px/0.8 'Cookie', Helvetica, sans-serif;
-  			color: green;
-  			text-align: center;
-  			padding: 10px;
-  			@media(max-width: 498px) {
-  				color: black;
-  			}
-			a {
-				font: 400 40px/0.8 'Cookie', Helvetica, sans-serif;
-  				color: green;
-  				text-align: center;
-  				@media(max-width: 498px) {
-  					color: black;
-  				}
-  				&:hover {
-  					color: white;
-  					text-decoration: none;
-  				}
 			}
 		}
 	}
@@ -210,328 +142,6 @@ div#portfolio-page {
 		}
 	}
 }
-
-
-//LEARNING PAGE >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-div#learning { 
-	@extend %purple-gradient;
-}
-
-div.learning-description p {
-	@extend %Raleway;
-	margin: 20px 275px;
-	@media(max-width: 991px) {
-		margin: 20px 100px;
-	}
-	@media(max-width: 768px) {
-		margin: 20px 50px;
-	}
-	@media(max-width: 498px) {
-		margin: 20px 0;
-	}
-}
-
-h1.learning {
-	@extend %warm-fatface;
-	margin: 20px 0;
-}
-
-div.learning-box {
-	background-color: green;
-	padding: 20px;
-	margin: 20px;
-	min-height: 250px;
-	max-width: 400px;
-	background-image: -ms-linear-gradient(top, #FFFFFF 0%, #30EFC9 100%);
-	background-image: -moz-linear-gradient(top, #FFFFFF 0%, #30EFC9 100%);
-	background-image: -o-linear-gradient(top, #FFFFFF 0%, #30EFC9 100%);
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), color-stop(1, #30EFC9));
-	background-image: -webkit-linear-gradient(top, #FFFFFF 0%, #30EFC9 100%);
-	background-image: linear-gradient(to bottom, #FFFFFF 0%, #30EFC9 100%);
-	border-radius: 10px;
-}
-
-h2.learning {
-	font: 400 40px/0.8 'Cookie', Helvetica, sans-serif;
-	color: green;
-	text-align: center;
-	padding: 10px;
-	a {
-		font: 400 40px/0.8 'Cookie', Helvetica, sans-serif;
-		color: green;
-		text-align: center;
-		&:hover {
-			color: white;
-			text-decoration: none;
-		}
-	}
-}
-
-//TEACHERS >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-
-div#teachers{
-	// margin: 0 70px;
-	@extend %soft-warm-background;
-	h1.teachers {
-		@extend %warm-fatface;
-		font-size: 50px;
-	}
-	div.teacher-box {
-		margin: 80px 0;
-		h2.teachers {
-			text-align: center;
-			font-family: 'Abril Fatface', cursive;
-			font-size: 30px;
-			margin-top: -10px;
-		}
-		a {
-			@extend %warm-link-font;
-		}
-	}
-	img {
-		max-height: 220px;
-		margin: 30px auto 30px auto;
-	}
-}
-
-//BOOKMARKS >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-div#bookmarks {
-	@extend %soft-warm-background;
-	div.bookmarks-body {
-		background-color: white;
-		margin: 0 100px;
-		padding: 0 100px;
-		div.bookmark-box-upper-left {
-			height: 400px;
-			width: 400px;
-			background-color: black;
-			color: green;
-		}
-		h1.bookmarks {
-			@extend %warm-fatface;
-		}
-		div.row.book-row {
-			border-bottom: 1px solid lighten(gray, 20%);
-			margin-bottom: 30px;
-			ul.bookmarks {
-				margin: 0 auto;
-				h2.bookmarks {
-					font-family: 'Abril Fatface', cursive;
-					font-size: 30px;
-					font-weight: bold;
-				}
-				li a {
-					@extend %warm-link-font;
-				}
-			}
-		}
-	}
-}
-
-
-
-//COURSES>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-div.courses {
-	background: image-url("/images/main/polka.jpg") 50% 0 no-repeat fixed;
-	div.course-body {
-		margin: 30px 250px;
-		background-color: black;
-		opacity: 0.75;
-		h1.courses {
-			@extend %warm-fatface;
-			text-align: center;
-			font-size: 50px;
-		}
-		p {
-			@extend %warm-font;
-			padding: 5px;
-		}
-		ul.course-list li h2 {
-			@extend %warm-font;
-			margin: 0;
-			padding: 15px;
-			font-size: 20px;
-		}
-		img.courses {
-			margin: 0 auto;
-			max-height: 200px;
-		}
-	}
-}
-
-@media(max-width: 991px) {
-	div.courses div.course-body {
-		margin: 30px 150px;
-	}
-}
-@media(max-width: 768px) {
-	div.courses div.course-body {
-		margin: 30px;
-	}
-}
-
-@media(max-width: 498px) {
-	div.courses div.course-body {
-		margin: 30px 0;
-		p {
-			padding: 0 3px;
-		}
-		ul.course-list li h2 {
-			font-size: 14px;
-		}
-	}
-}
-
-// ADVENTURES >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-
-
-div.adventures {
-	background: image-url("/images/main/loop-back.jpg") 50% 0 no-repeat fixed;
-	height: 1000;
-	div.adventures-body {
-		margin: 20px 200px;
-		@extend %soft-warm-background-rgba;
-		h1.adventures {
-			text-align: center;
-			// color: #33CCFF;
-			color: #99CC00;
-			font-weight: bold;
-			padding: 40px;
-			font: 400 120px/1.0 'Just Another Hand', Helvetica, sans-serif;
-		  	// color: #969595;
-		  	text-shadow: 0px 3px 0px #5e5e5e, 0px 5px 0px #4d4d4d, 0px 7px 0px #3c3c3c, 0px 9px 0px #2b2b2b, 3px 8px 15px rgba(0,0,0,0.1), 3px 8px 5px rgba(0,0,0,0.3);
-		}
-		p {
-			@extend %p-font;
-			color: black;
-			font-weight: bold;
-			padding: 0 10px;
-		}
-		div.row.image-row {
-			margin: 20px 0;
-			img.thumbnail.gallery {
-				max-height: 250px;
-				border-radius: 160px;
-				margin: 0 auto;
-				opacity: 1;
-			}
-			a.fliplightbox {
-				z-index: 9999;
-				opacity: 1;
-			}
-		}
-	}
-}
-
-@media(max-width: 991px) {
-	div.adventures div.adventures-body {
-		margin: 20px 100px;
-		div.row.image-row img.thumbnail.gallery {
-			max-height: 175px;
-		}
-	}
-}
-
-@media(max-width: 768px) {
-	div.adventures div.adventures-body {
-		margin: 20px 50px;
-		div.row.image-row img.thumbnail.gallery {
-			max-height: 115px;
-		}
-	}
-}
-
-@media(max-width: 498px) {
-	div.adventures div.adventures-body {
-		margin: 20px 0;
-		div.row.image-row img.thumbnail.gallery {
-			max-height: 95px;
-		}
-	}
-}
- 
-// div#adventures{
-// 	background: image-url("images/peanuts.jpg") 50% 0 no-repeat fixed;
-// 	background-color: black;
-// 	color: white;
-// 	height: 1920px;
-// 	padding: 0 0 0 20px;
-// 	display: block;
-// }
-
-// div.float-center {
-// 	padding: 100px 0 0 0;
-// 	position: relative;
-// 	width: 1000px;
-// 	float: center;
-// 	margin: 0 0 0 0; 
-// 	display: block;
-// }
-
-// li.adventures a {
-// 	text-align: center;
-// 	// color: #33CCFF;
-// 	color: #99CC00;
-// 	font-weight: bold;
-// 	padding: 30px;
-// 	font: 400 65px/1.0 'Just Another Hand', Helvetica, sans-serif;
-//   	// color: #969595;
-//   	text-shadow: 0px 3px 0px #5e5e5e, 0px 5px 0px #4d4d4d, 0px 7px 0px #3c3c3c, 0px 9px 0px #2b2b2b, 3px 8px 15px rgba(0,0,0,0.1), 3px 8px 5px rgba(0,0,0,0.3);
-//   	&:hover{
-//   		text-decoration: none;
-//   		color: purple;
-//   	}
-// }
-
-//SOLUTIONS >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-div.solutions-blog{
-	background-color: gray;
-	div.solutions-body {
-		margin: 0 100px;
-		@media(max-width: 498px) {
-			margin: 0;
-		}
-		@extend %purple-gradient;
-		border-radius: 10px;
-		h1.solutions-blog {
-			@extend %warm-fatface;
-			font-size: 50px;
-			padding: 10px 0 0 0;
-		}
-		p {
-			@extend %p-font;
-			padding: 0 10px;
-			font-size: 18px;
-		}
-		pre {
-			background-color: lighten(gray, 20%);
-			border: 5px solid white;
-		}
-		a {
-			@extend %warm-link-font;
-			text-align: center;
-			padding-bottom: 20px;
-		}
-		ul {
-			// list-style: none;
-			h3 {
-				@extend %warm-fatface;
-				font-size: 30px;
-			}
-			li h2 {
-				@extend %green-font;
-				text-align: center;
-			}
-			li a {
-				text-align: center;
-			}
-		}
-	}
-}
-
-
-
-
 
 // BLOG TAGS STYLING>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
