--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,1 +1,23 @@
-_footer.html.erb
+<div class="footer">
+	<div class="row">
+		<div class="col-sm-4 col-xs-12">
+			<h5>All images are owned by Jacquelyn Carver.</h5>
+			<h5>&copy;Jacquelyn Carver 2016</h5>
+		</div>
+		<div class="col-sm-4 col-xs-12">
+			<ul>
+				<li><h4><%= link_to 'Programming', 'programming_resume.html' %></h4></li>
+	            <li><h4><%= link_to 'General', 'general_resume.html' %></h4></li>
+	            <li><h4><%= link_to 'Yoga', 'yoga_resume.html' %></h4></li>
+	            <li><h4><%= link_to 'Writing', 'writing_resume.html' %></h4></li>
+	        </ul>
+		</div>
+		<div class="col-sm-4 col-xs-12">
+			<ul>
+				<li><h4><%= link_to 'About Me', 'about.html' %></h4></li>
+				<li><h4><%= link_to 'Home', '/' %></h4></li>
+				<li><span class="glyphicon glyphicon-facebook"></span></li>
+	        </ul>
+		</div>
+	</div>
+</div>
