Added images and changed fonts.

--- a/source/yoga_resume.html.erb
+++ b/source/yoga_resume.html.erb
@@ -28,26 +28,32 @@
 		<div class="row yoga_info_row">
 			<div class="col-sm-6">
 				<h3>Sukha Arts Center</h3>
+				<p>An amazing studio owned by an inspiring friend of mine, Sukha is not only where I have taken many yoga classes, it's also the place where I was introduced to Aerial Arts, and where I recieved my 200 hour certification. And, of course, is where I teach mat yoga, aerial yoga, and aerial dance classes.</p>
 			</div>
 			<div class="col-sm-6">
-				<p>An amazing studio owned by an inspiring friend of mine, Sukha is not only where I have taken many yoga classes, it's also the place where I was introduced to Aerial Arts, and where I recieved my 200 hour certification. And, of course, is where I teach mat yoga, aerial yoga, and aerial dance classes.</p>
+				<img src="../images/home/sukha.png" class="img-responsive"/>
 			</div>
 		</div>
 		<div class="row yoga_info_row">
 			<div class="col-sm-6">
-				<p>An outpatient program for recovering adults, this is where I began teaching as a student and continued on to become an employee as a regular yoga teacher.</p>
+				<img src="../images/home/yoga.png" class="img-responsive"/>
 			</div>
 			<div class="col-sm-6">
 				<h3>Lexington Center</h3>
+				<p>An outpatient program for recovering adults, this is where I began teaching as a student and continued on to become an employee as a regular yoga teacher.</p>
 			</div>
 		</div>
 		<div class="row yoga_info_row">
 			<div class="col-sm-6">
 				<h3>Private Lessons</h3>
+				<p>In addition to teaching classes with mulitple students in public studios, I have also had the opportunity to work closely with one student who, due to scheduling or confidence, are unable to practice with a group. Practicing one-on-one gives me a chance to really focus on individual goals and needs and gain a deep understanding of yoga's ability to help heal and grow.</p>
 			</div>
 			<div class="col-sm-6">
-				<p>In addition to teaching classes with mulitple students in public studios, I have also had the opportunity to work closely with one student who, due to scheduling or confidence, are unable to practice with a group. Practicing one-on-one gives me a chance to really focus on individual goals and needs and gain a deep understanding of yoga's ability to help heal and grow.</p>
+				<img src="../images/home/aerial.png" class="img-responsive"/>
 			</div>
 		</div>
 	</div>
+
+	<%= partial(:footer) %>
+
 </div> <!-- yoga_resume -->
