--- a/source/stylesheets/_resume.css.scss
+++ b/source/stylesheets/_resume.css.scss
@@ -15,13 +15,14 @@
 	}
 	.yoga_info_row {
 		padding: 10%;
+		text-align: center;
 		p {
+			@extend %Roboto;
 			font-size: 15px;
-			font-family: 'Raleway', sans-serif;
 		}
 		h3 {
-			@extend %warm-fatface;
-			font-size: 30px;
+			@extend %Poiret;
+			font-size: 50px;
 		}
 	}
 	.cert_info {
