--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,6 +9,7 @@ per_page: 10
             <li><p class="footer"><%= link_to 'Programming', 'programming_resume.html' %></p></li>
             <li><p class="footer"><%= link_to 'General', 'general_resume.html' %></p></li>
             <li><p class="footer"><%= link_to 'Yoga', 'yoga_resume.html' %></p></li>
+            <li><p class="footer"><%= link_to 'Writing', 'writing_resume.html' %></p></li>
             <li><p class="footer"><%= link_to 'About Me', 'about.html' %></p></li>
             <li><p class="footer"><%= link_to 'Contact Me', 'contact.html' %></p></li>
           </ul>
