--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -42,4 +42,8 @@
 			<p>I think I have found about myself that I don't want to pick a career in which I do just one thing. I have so many interests and many things that I am passionate about, that I don't want to cement my focus into just one activity. This site, I am hoping, will serve as a nexus of all things that I devote my time and creativity to. I think it's important to stay busy and to do what you love. I want to continue to grow and learn and gain experience doing the things that bring me happiness.</p>
 		</div>
 	</div>
+
+	<%= partial(:footer) %>
+
+
 </div>
