Updated website list.

--- a/source/programming_resume.html.erb
+++ b/source/programming_resume.html.erb
@@ -4,7 +4,6 @@
       <div class="col-md-12">
         <h1 id="portfolio">Jacquelyn Carver</h1>
         <h2 id="portfolio">jacquelyn905@gmail.com | github.com/agnikai</h2>
-        <h2 id="portfolio">Jersey City, New Jersey</h2>
       </div>
     </div>
     <div class="row">
@@ -16,8 +15,7 @@
       <div class="col-md-6 col-xs-12">
         <h4 class="portfolio">iDeal Furniture Outlet</h4>
         <h5 class="portfolio">E-Commerce Spree Site</h5>
-        <p class="portfolio">This site was built by MFRW Design, and was collaborated on by myself and two other developers. I contributed to most of the frontend development and some project management, as well as an in depth look into the Rails and Spree frameworks. Using a number of tools including Bootstrap, the website if fully responsive. To read more about the building of the site, or to take a look at the site itself, see below:</p>
-        <p><%= link_to 'Building this site.', '/2014/03/02/ideal.html' %></p>
+        <p class="portfolio">This site was built by MFRW Design, and was collaborated on by myself and two other developers. I contributed to most of the frontend development and some project management, as well as an in depth look into the Rails and Spree frameworks. Using a number of tools including Bootstrap, the website is fully responsive.</p>
         <p><%= link_to 'iDeal Furniture Outlet', 'http://ideal-furniture-outlet.herokuapp.com/' %></p>
       </div>
       <div class="col-md-6 col-xs-12">
@@ -29,10 +27,19 @@
         <img class="portfolio img-responsive" src="/images/main/mysite-home.jpg" />
       </div>
       <div class="col-md-6 col-xs-12">
-        <h4 class="portfolio">All About Jacquelyn</h4>
-        <h5 class="portfolio">A Programming Focused Personal Blog</h5>
-        <p class="portfolio">I built this site using the Middleman Blogging Framework. Well this main page serves as a reference to all of my work and experience, the site itself it meant to be used as a map of my adventures in learning to program. Each day I learn something new, break it, and then learn how to fix it. As my knowledge base grows, so will this site, so check back for updates!</p>
-        <p><%= link_to 'Building this site.', '/2014/05/20/jacquelyn.html' %></p>
+        <h4 class="portfolio">Jacquelyn Carver</h4>
+        <h5 class="portfolio">An Online Resume</h5>
+        <p class="portfolio">I built this with Middleman and Boostrap as a way to showcase all of my work in one place. This site was initially to be solely dedicated to documenting my work as a programmer, but I decided to expand it to encompass all of my work history and experience.</p>
+      </div>
+    </div>
+    <div class="row show-row">
+       <div class="col-md-6 col-xs-12">
+          <h4 class="portfolio">Candescent Chaos</h4>
+          <h5 class="portfolio">A Blog</h5>
+          <p class="portfolio">This site was also built with Middleman, using the blog extension. I built this with a dual purpose in mind, the first being to demonstrate my design and programming capabilities, and the second to serve as an example of my writing.</p>
+        </div>
+      <div class="col-md-6 col-xs-12">
+        <img class="portfolio img-responsive" src="/images/home/chaos_blog.png" />
       </div>
     </div>
     <div class="row">
@@ -105,19 +112,7 @@
         <p><%= link_to 'Rails Dog', 'http://railsdog.com/home' %></p>
       </div>
     </div>
-    <div class="row show-row">
-      <div class="col-md-6 col-xs-12">
-        <h4 class="portfolio">Mark Gallery</h4>
-        <h5 class="portfolio">Modern Art Gallery</h5>
-        <p class="portfolio">An art gallery located in Englewood, New Jersey, this is a part-time postion where I am fortunate enough to home my design skills using Photoshop and In Design. I also will post blogs highlighting different artists or events for the gallery's site.</p>
-        <p><%= link_to 'Mark Gallery', 'http://mark-gallery.com/' %></p>
-        <p><%= link_to 'Gallery Blog', 'https://markgallery.wordpress.com/2014/06/10/arthamptons-july-2014/' %></p>
-      </div>
-      <div class="col-md-6 col-xs-12">
-        <img class="portfolio img-responsive" src="/images/main/markgallery-home.jpg" />
-      </div>
-    </div>
-      <div class="row">
+    <div class="row">
         <div class="col-md-12">
           <h3 id="portfolio">Education</h3>
         </div>
