Updated experience info.

--- a/source/programming_resume.html.erb
+++ b/source/programming_resume.html.erb
@@ -1,11 +1,8 @@
 <div id="portfolio-page">
   <div class="portfolio-body">
-    <div class="row">
-      <div class="col-md-12">
-        <h1 id="portfolio">Jacquelyn Carver</h1>
-        <h2 id="portfolio">jacquelyn905@gmail.com | github.com/agnikai</h2>
-      </div>
-    </div>
+
+    <%= partial(:header) %>
+
     <div class="row">
       <div class="col-md-12">
         <h3 id="portfolio">Porfolio of Sites</h3>
@@ -166,4 +163,7 @@
       </div>
     </div>
   </div>
+
+  <%= partial(:footer) %>
+  
 </div>
