Added header to yoga page.

--- a/source/yoga_resume.html.erb
+++ b/source/yoga_resume.html.erb
@@ -1,4 +1,7 @@
 <div class="yoga_resume">
+
+	<%= partial(:header) %>
+
 	<div class="row cert">
 		<div class="col-sm-12">
 			<h1>Yoga</h1>
@@ -18,11 +21,6 @@
 		<div class="row y_e1 yoga_row">
 			<div class="col-sm-12">
 				<h2>Experience</h2>
-			</div>
-		</div>
-		<div class="row yoga_info_row">
-			<div class="col-sm-12">
-				<p>Always looking for more ways to learn and grow!</p>
 			</div>
 		</div>
 		<div class="row yoga_info_row">
