Added header to writing page.

--- a/source/writing_resume.html.erb
+++ b/source/writing_resume.html.erb
@@ -1,11 +1,8 @@
 <div id="portfolio-page">
   <div class="portfolio-body">
-    <div class="row">
-      <div class="col-md-12">
-        <h1 id="portfolio">Jacquelyn Carver</h1>
-        <h2 id="portfolio">jacquelyn905@gmail.com</h2>
-      </div>
-    </div>
+
+    <%= partial(:header) %>
+
     <div class="row show-row">
       <div class="col-md-6 col-xs-12">
         <h4 class="portfolio">Mark Gallery</h4>
