--- a/source/general_resume.html.erb
+++ b/source/general_resume.html.erb
@@ -7,7 +7,7 @@
  	</div>
 
  	<div class="row">
- 		<div class="col-md-6 col-sm-12">
+ 		<div class="col-sm-6 col-xs-12">
  			<ul><h3>EXPERIENCE:</h3>
  				<li>
  					<h4>Mezza Westwood</h4>
@@ -39,6 +39,10 @@
  					<h5>Server August 2015 - December 2015</h5>
  					<p>I worked briefly as a server at this upscale seafood restaurant that originated in Asbury Park, NJ. However distance and financial instabiilty brought my time this company to a close.</p>
  				</li>
+ 			</ul>
+ 		</div>
+ 		<div class="col-sm-6 col-xs-12">
+ 			<ul>
  				<li>
  					<h4>MFRW Design</h4>
  					<h5>Junior Developer and Project Manager 09/13 – Present</h5>
@@ -71,24 +75,30 @@
  				</li>
  			</ul>
  		</div>
-
- 		<div class="col-md-6 col-sm-12">
+ 		<div class="row">
  			<ul>
+ 				<div class="col-sm-4 col-xs-12">
  				<li><h3>EDUCATION:</h3>
  					<h4>University of Hawaii at Manoa, Honolulu, Hawaii</h4>
  					<p>Major: Psychology, Attended September 2007 – May 2009</p>
  				</li>
+	 			</div>
+	 			<div class="col-sm-4 col-xs-12">
  				<li><h3>SKILLS:</h3>
  					<h4>Languages: Proficient: CSS3, HTML5, SASS/SCSS</h4>
  					<h4>Familiar:  JavaScript, Ruby</h4>
  					<h4>Tools: Bootstrap 3, Compass, Git/GitHub, jQuery, Middleman</h4>
  				</li>
+	 			</div>
+	 			<div class="col-sm-4 col-xs-12">
  				<li><h3>INTERESTS:</h3>
 					<h4>Drawing & Painting</h4>
 					<h4>Photography & Photo Editing</h4>
 					<h4>Cooking & Baking</h4>
 				</li>
- 		</div>
+				</div>
+			</ul>
+		</div>
 	</div>
 
 	<%= partial(:footer) %>
