--- a/source/_footer.html.erb
+++ b/source/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer">
 	<div class="row">
 		<div class="col-sm-4 col-xs-12">
-			<h5>All images are owned by Jacquelyn Carver.</h5>
+			<h5>Images owned by Jacquelyn Carver.</h5>
 			<h5>&copy;Jacquelyn Carver 2016</h5>
 		</div>
 		<div class="col-sm-4 col-xs-12">
