--- a/source/layout.erb
+++ b/source/layout.erb
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-    <title>Jacquelyn Carver<%= ' - ' + current_article.title unless current_article.nil? %></title>
+    <title>Jacquelyn Carver</title>
   <!--   <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %> -->
 
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+
+    <link type="text/css" rel="stylesheet" href="animate.css">
 
     <link rel="stylesheet" href="/stylesheets/magnific-popup.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -41,6 +43,9 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="/javascripts/jquery.magnific-popup.js"></script> 
 
+    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="jquery.aniview.min.js"></script>
+
     <script type="text/javascript" src="/javascripts/all.js"></script>
   
 
@@ -50,39 +55,7 @@
   </head>
     <body>
       <div class="container-fluid">
-      <header class="hidden-xs">
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-          <div class="container">
-            <%= link_to 'Home', '/index.html' %>
-            <%= link_to 'Portfolio', '/resume.html' %>
-          <!--    <%= link_to 'Blogs', '/blog_list.html' %> -->
-             <!-- <%= link_to 'Contact Me', 'contact.html' %> -->
-<!--              <%= link_to 'My Projects', '/tags/projects.html' %>
-             <%= link_to 'Bookmarks', '/bookmarks.html' %>
-             <%= link_to 'Events', '/tags/events.html' %>
-             <%= link_to 'Courses', '/tags/courses.html' %> -->
-          </div>
-        </nav>
-     </header> 
-     <header class="visible-xs">
-      <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="btn-group">
-          <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-          Adventures in Programming<span class="caret"></span></button>
-          <ul class="dropdown-menu" role="menu">
-               <li class="mini-header-links"><%= link_to 'Home', '/index.html' %></li>
-               <li class="mini-header-links"><%= link_to 'Blogs', '/blog_list.html' %></li>
-               <li class="mini-header-links"><%= link_to 'Bookmarks', '/bookmarks.html' %></li>
-               <li class="mini-header-links"><%= link_to 'Resume', '/resume.html' %></li>
-               <li class="mini-header-links"><%= link_to 'Contact Me', '/contact.html' %></li>
-  <!--               <li><%= link_to 'About Me', '/about-me.html' %></li> -->
-<!--                 <li><%= link_to 'My Projects', '/tags/projects.html' %></li>
-                <li><%= link_to 'Events', '/tags/events.html' %></li>
-                <li><%= link_to 'Courses', '/tags/courses.html' %></li> -->
-          </ul>
-        </div>
-      </nav>
-      </header>   
+
       <div id="main" role="main">
         <%= yield %>
       </div>
