--- a/source/layout.erb
+++ b/source/layout.erb
@@ -11,7 +11,7 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
 
-    <link type="text/css" rel="stylesheet" href="animate.css">
+    <link type="text/css" rel="stylesheet" href="stylesheets/animate.css">
 
     <link rel="stylesheet" href="/stylesheets/magnific-popup.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
