--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,7 @@ per_page: 10
 
 
           <ul>
-            <li><p class="footer"><%= link_to 'Programming', 'programming_resume.html' %></p></li>
+            <li><p class="footer animated infinite bounce"><%= link_to 'Programming', 'programming_resume.html' %></p></li>
             <li><p class="footer"><%= link_to 'General', 'general_resume.html' %></p></li>
             <li><p class="footer"><%= link_to 'Yoga', 'yoga_resume.html' %></p></li>
             <li><p class="footer"><%= link_to 'Writing', 'writing_resume.html' %></p></li>
