Added new images and header.

--- a/source/yoga_resume.html.erb
+++ b/source/yoga_resume.html.erb
@@ -29,12 +29,12 @@
 				<p>An amazing studio owned by an inspiring friend of mine, Sukha is not only where I have taken many yoga classes, it's also the place where I was introduced to Aerial Arts, and where I recieved my 200 hour certification. And, of course, is where I teach mat yoga, aerial yoga, and aerial dance classes.</p>
 			</div>
 			<div class="col-sm-6">
-				<img src="../images/home/sukha.png" class="img-responsive"/>
+				<img src="../images/home/sukha_namaste.jpg" class="img-responsive"/>
 			</div>
 		</div>
 		<div class="row yoga_info_row">
 			<div class="col-sm-6">
-				<img src="../images/home/yoga.png" class="img-responsive"/>
+				<img src="../images/home/mar_yoga1.jpg" class="img-responsive"/>
 			</div>
 			<div class="col-sm-6">
 				<h3>Lexington Center</h3>
@@ -47,7 +47,27 @@
 				<p>In addition to teaching classes with mulitple students in public studios, I have also had the opportunity to work closely with one student who, due to scheduling or confidence, are unable to practice with a group. Practicing one-on-one gives me a chance to really focus on individual goals and needs and gain a deep understanding of yoga's ability to help heal and grow.</p>
 			</div>
 			<div class="col-sm-6">
-				<img src="../images/home/aerial.png" class="img-responsive"/>
+				<img src="../images/home/inverted_eagle.jpg" class="img-responsive"/>
+			</div>
+		</div>
+	</div>
+
+	<div id="fun_yoga_stuff">
+		<div class="row">
+			<div class="col-sm-2 col-xs-12">
+				<img src="../images/home/mar_yoga1.jpg" class="img-responsive"/>
+			</div>
+			<div class="col-sm-2 col-xs-12">
+				<img src="../images/home/mar_yoga2.jpg" class="img-responsive"/>
+			</div>
+			<div class="col-sm-2 col-xs-12">
+				<img src="../images/home/mar_yoga3.jpg" class="img-responsive"/>
+			</div>
+			<div class="col-sm-2 col-xs-12">
+			</div>
+			<div class="col-sm-2 col-xs-12">
+			</div>
+			<div class="col-sm-2 col-xs-12">
 			</div>
 		</div>
 	</div>
