Added Header partial.

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,4 +1,7 @@
 <div class="about_me">
+
+	<%= partial(:header) %>
+	
 	<div class="row">
 		<div class="col-sm-12">
 			<h1>About Me</h1>
@@ -6,40 +9,40 @@
 	</div>
 	<div class="row about_img_row1">
 		<div class="col-sm-12">
-			<img src="../images/home/pstrip2.jpg" class="img-responsive"/>
+			<img src="../images/home/pstrip2.jpg" class="img-responsive aniview" av-animation="flipInX"/>
 		</div>
 	</div>
 	<div class="row about_info_row">
 		<div class="col-sm-12">
-			<p>I have lived most of my life on the east coast, being born in Yonkers, New York and then moving to Old Tappan, New Jersey when I was four. I lived in Hawaii briefly, staying there over the summer growing up and then attending college at the University of Hawaii at Manoa from 2005 - 2009, after which I stayed in Hawaii for another year because, understandably, it's hard to find a good reason to stop living in paradise. After Hawaii, I also lived in Alexandria, Virginia, just outside of Washington D.C. for about three years.</p>
+			<p class="aniview" av-animation="fadeInUp">I have lived most of my life on the east coast, being born in Yonkers, New York and then moving to Old Tappan, New Jersey when I was four. I lived in Hawaii briefly, staying there over the summer growing up and then attending college at the University of Hawaii at Manoa from 2005 - 2009, after which I stayed in Hawaii for another year because, understandably, it's hard to find a good reason to stop living in paradise. After Hawaii, I also lived in Alexandria, Virginia, just outside of Washington D.C. for about three years.</p>
 		</div>
 	</div>
 	<div class="row about_info_row">
 		<div class="col-sm-12">
-			<p>I went to school for Psychology, I've always had a penchant for understanding human nature, including my own, and taking an in-depth look into Psychology helped me to gain perspective. While in school I worked several jobs including scooping ice cream at Bubbies, a location made famous for its mochi ice cream balls, and cocktail serving at the Magic of Polynesia show in Waikiki. I continued serving in Virginia. I worked as a server at a family restuarant named Fireflies, and gained experience first as a server, then a bartender, and finally a manager for a year before leaving. My next job was at the Curious Grape, a wine focused restaurant where I learned a large amount about wine including growth, locations, preparations, grapes, and flavor profiles. I worked as a server there, and as a part-time party planner and wine tasting assistant.</p>
+			<p class="aniview" av-animation="fadeInUp">I went to school for Psychology, I've always had a penchant for understanding human nature, including my own, and taking an in-depth look into Psychology helped me to gain perspective. While in school I worked several jobs including scooping ice cream at Bubbies, a location made famous for its mochi ice cream balls, and cocktail serving at the Magic of Polynesia show in Waikiki. I continued serving in Virginia. I worked as a server at a family restuarant named Fireflies, and gained experience first as a server, then a bartender, and finally a manager for a year before leaving. My next job was at the Curious Grape, a wine focused restaurant where I learned a large amount about wine including growth, locations, preparations, grapes, and flavor profiles. I worked as a server there, and as a part-time party planner and wine tasting assistant.</p>
 		</div>
 	</div>
 	<div class="row about_info_row">
 		<div class="col-sm-6">
-			<p>Eventually I decided to move back to New Jersey and began to take an interest in computer programming. I began taking courses online on HTML, CSS, Javscript, and Ruby. I started working with MFRW Design as a frontend developer and executive assistant. Eventually, I began contract programming work for Rails Dog through MFRW Design and started experiencing the intricacies of remote work with a large company. Programming gave me the freedom and finacial stability that allowed me to travel to Australia, where I was fortunate enough to live for three months, just outside of Melbourne.</p>
+			<p class="aniview" av-animation="fadeInUp">Eventually I decided to move back to New Jersey and began to take an interest in computer programming. I began taking courses online on HTML, CSS, Javscript, and Ruby. I started working with MFRW Design as a frontend developer and executive assistant. Eventually, I began contract programming work for Rails Dog through MFRW Design and started experiencing the intricacies of remote work with a large company. Programming gave me the freedom and finacial stability that allowed me to travel to Australia, where I was fortunate enough to live for three months, just outside of Melbourne.</p>
 		</div>
 		<div class="col-sm-6">
-			<img src="../images/home/yoga_strip1.jpg" class="img-responsive yoga_strip"/>
+			<img src="../images/home/yoga_strip1.jpg" class="img-responsive yoga_strip aniview" av-animation="rotateInDownRight"/>
 		</div>
 	</div>
 	<div class="row about_info_row">
 		<div class="col-sm-12">
-			<p>When I returned from Australia, I began working at Mezza Restaurant in Westwood in New Jersey. I put programming on the back burner for a while as I spent most of my time working and gaining increasing interest in yoga, particularly aerial yoga. I had always enjoyed yoga and aerial ignited a passion in me that lead to my enrolling in Yoga Mountain's 200 hour certification program, which I completed in February 2016. Immediately after I began teaching mat and aerial yoga.</p>
+			<p class="aniview" av-animation="fadeInUp">When I returned from Australia, I began working at Mezza Restaurant in Westwood in New Jersey. I put programming on the back burner for a while as I spent most of my time working and gaining increasing interest in yoga, particularly aerial yoga. I had always enjoyed yoga and aerial ignited a passion in me that lead to my enrolling in Yoga Mountain's 200 hour certification program, which I completed in February 2016. Immediately after I began teaching mat and aerial yoga.</p>
 		</div>
 	</div>
 	<div class="row about_info_row">
 		<div class="col-sm-12">
-			<p>Currently I still work at Mezza in Westwood five to six days a week. I am teaching classes on Thursday's at Lexington House in Airmont, New York and aerial class at Sukha Arts Center. I will be adding more classes very soon to my schedule at Sukha, as well as taking on a student for weekly private yoga lessons. I am also continuing to program as I am currently taking an online course on React.js as well as private projects such as this website, and my own personal blog. I love to write, which is another driving force behind the blog. I have found a niche in assisting companies and individuals with their instagram accounts, which is why I have also created an instagram dedicated to showcasing pictures I have revamped for others. I am also assisting a friend in creating a web presence for a business he recently began.</p>
+			<p class="aniview" av-animation="fadeInUp">Currently I still work at Mezza in Westwood five to six days a week. I am teaching classes on Thursday's at Lexington House in Airmont, New York and aerial class at Sukha Arts Center. I will be adding more classes very soon to my schedule at Sukha, as well as taking on a student for weekly private yoga lessons. I am also continuing to program as I am currently taking an online course on React.js as well as private projects such as this website, and my own personal blog. I love to write, which is another driving force behind the blog. I have found a niche in assisting companies and individuals with their instagram accounts, which is why I have also created an instagram dedicated to showcasing pictures I have revamped for others. I am also assisting a friend in creating a web presence for a business he recently began.</p>
 		</div>
 	</div>
 	<div class="row about_info_row">
 		<div class="col-sm-12">
-			<p>I think I have found about myself that I don't want to pick a career in which I do just one thing. I have so many interests and many things that I am passionate about, that I don't want to cement my focus into just one activity. This site, I am hoping, will serve as a nexus of all things that I devote my time and creativity to. I think it's important to stay busy and to do what you love. I want to continue to grow and learn and gain experience doing the things that bring me happiness.</p>
+			<p class="aniview" av-animation="fadeInUp">I think I have found about myself that I don't want to pick a career in which I do just one thing. I have so many interests and many things that I am passionate about, that I don't want to cement my focus into just one activity. This site, I am hoping, will serve as a nexus of all things that I devote my time and creativity to. I think it's important to stay busy and to do what you love. I want to continue to grow and learn and gain experience doing the things that bring me happiness.</p>
 		</div>
 	</div>
 
