--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,15 +3,116 @@ pageable: true
 per_page: 10
 ---
 
+<div class="home">
+	<div id="intro">
+		<div class="row">
+			<div class="col-sm-6 col-xs-12">
+				<img src="../images/home/headshot1.jpg" class="img-responsive headshot aniview" av-animation="slideInRight"/>
+			</div>
+			<div class="col-sm-6 col-xs-12">
+				<h1 class="aniview welcome" av-animation="rotateInDownLeft">It's Me, Jacquelyn</h1>
+				<p class="intro_p intro_1 aniview" av-animation="rotateInDownLeft">Thanks for visiting my page!</p> 
+				<p class="intro_p intro_2 aniview" av-animation="rotateInDownLeft">Take a peek around!</p> 
+				<p class="intro_p intro_3 aniview" av-animation="rotateInDownLeft">I hope you enjoy!</p> 
+			</div>
+		</div>
+	</div>
 
 
-          <ul>
-            <li><p class="footer animated infinite bounce"><%= link_to 'Programming', 'programming_resume.html' %></p></li>
-            <li><p class="footer"><%= link_to 'General', 'general_resume.html' %></p></li>
-            <li><p class="footer"><%= link_to 'Yoga', 'yoga_resume.html' %></p></li>
-            <li><p class="footer"><%= link_to 'Writing', 'writing_resume.html' %></p></li>
-            <li><p class="footer"><%= link_to 'About Me', 'about.html' %></p></li>
-            <li><p class="footer"><%= link_to 'Contact Me', 'contact.html' %></p></li>
-          </ul>
+<ul id="home_resume_list">
+	<li>
+		<div class="row" id="about_me_link_row">
+			<div class="col-sm-6">
+				<h2 class="link_header aniview" av-animation="slideInLeft"><%= link_to 'About Me', 'about.html' %></h2>
+				<p class="aniview about_me_description" av-animation="slideInUp">A little background on me...</p>
+			</div>
+			<div class="col-sm-2">
+				<img src="../images/home/headshot2.jpg" class="img-responsive aniview about_image_1" av-animation="zoomInUp"/>
+			</div>
+			<div class="col-sm-2">
+				<img src="../images/main/hawaii.jpg" class="img-responsive aniview about_image_2" av-animation="zoomInUp"/>
+				<img src="../images/home/highline.jpg" class="img-responsive aniview about_image_3" av-animation="zoomInUp"/>
+			</div>
+			<div class="col-sm-2">
+				<img src="../images/home/inverted_eagle.jpg" class="img-responsive aniview  about_image_4" av-animation="zoomInUp"/>
+			</div>
+		</div>
+		
+	</li>
+	<li>
+		<div class="row" id="yoga_link_row">
+			<div class="col-sm-3 col-xs-12">
+				<img src="../images/home/aerial_backyard.jpg" class="img-responsive aniview yoga_image yoga_image_1" av-animation="zoomInUp"/>
+				<img src="../images/home/beach_headstand.jpg" class="img-responsive aniview yoga_image yoga_image_2" av-animation="zoomInUp"/>
+			</div>
+			<div class="col-sm-3 col-xs-12">
+				<img src="../images/home/aerial_mermaid.jpg" class="img-responsive aniview yoga_image yoga_image_3" av-animation="zoomInUp"/>
+			</div>
+			<div class="col-sm-6 col-xs-12">
+				<h2 class="link_header aniview" av-animation="slideInUp"><%= link_to 'Yoga', 'yoga_resume.html' %></h2>
+				<p class="aniview yoga_description" av-animation="slideInUp">All about my certification, and where I am currently teaching.</p>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="row" id="programming_link_row">
+			<div class="col-sm-6 col-xs-12">
+				<h2 class="link_header aniview" av-animation="bounceInLeft"><%= link_to 'Programming', 'programming_resume.html' %></h2>
+				<p class="aniview" av-animation="slideInUp">Companies I've worked for, projects I've contributed to, &amp; skills I've procured.</p>
+			</div>
+			<div class="col-sm-3 col-xs-12">
+				<img src="../images/home/coloringbook_latte.jpg" class="img-responsive aniview pg_image pg_image_1" av-animation="zoomInUp"/>
+			</div>
+			<div class="col-sm-3 col-xs-12">
+				<img src="../images/home/highline.jpg" class="img-responsive aniview pg_image pg_image_2" av-animation="zoomInUp"/>
+				<img src="../images/home/chaos_blog.png" class="img-responsive aniview pg_image pg_image_3" av-animation="zoomInUp"/>
+			</div>
+		</div>
+	</li>
+	<li>
+		<div class="row" id="programming_link_row">
+			<div class="col-sm-3 col-xs-12">
+				<img src="../images/home/coloringbook_latte.jpg" class="img-responsive aniview pg_image pg_image_1" av-animation="zoomInUp"/>
+			</div>
+			<div class="col-sm-3 col-xs-12">
+				<img src="../images/home/chaos_blog.png" class="img-responsive aniview pg_image pg_image_3" av-animation="zoomInUp"/>
+			</div>
+			<div class="col-sm-6 col-xs-12">
+				<h2 class="link_header aniview" av-animation="bounceInRight"><%= link_to 'Writing', 'writing_resume.html' %></h2>
+				<p class="aniview" av-animation="slideInRight">Samples of my writing.(Of which that description is not an example.)</p>
+			</div>
+	</li>
+	<li>
+		<div class="row" id="general_link_row">
+			<div class="col-sm-6 col-xs-12">
+				<h2 class="link_header aniview" av-animation="bounceInLeft"><%= link_to 'General', 'general_resume.html' %></h2>
+				<p class="aniview" av-animation="slideInUp">A nearly complete list of (almost) all my work experience.</p>
+			</div>
+			<div class="col-sm-3 col-xs-12">
+				<img src="../images/main/hawaii-friends.jpg" class="img-responsive aniview pg_image pg_image_3" av-animation="zoomInUp"/>
+			</div>
+			<div class="col-sm-3 col-xs-12">
+				<img src="../images/main/beach.jpg" class="img-responsive aniview pg_image pg_image_3" av-animation="zoomInUp"/>
+			</div>
+		</div>
+		<p class="aniview" av-animation="slideInRight"></p>
+
+	</li>
+	<li>
+		<div class="row" id="contact_link_row">
+			<div class="col-sm-3 col-xs-12">
+			</div>
+			<div class="col-sm-3 col-xs-12">
+			</div>
+			<div class="col-sm-6 col-xs-12">
+				<h2 class="link_header aniview" av-animation="bounceInRight"><%= link_to 'Contact Me', 'contact.html' %></h2>
+				<p class="aniview" av-animation="slideInRight">How to get in touch with me.</p>
+			</div>
+	</li>
+</ul>
+<div>
+	<p>Thanks for stopping by!</p>
+</div>
  
+</div> <!-- home -->
 
