--- a/source/general_resume.html.erb
+++ b/source/general_resume.html.erb
@@ -1,10 +1,6 @@
 <div id="resume-page">
-	<div class="row text-center">
-		<div class="col-md-12">
-			
-			
-	 	</div>
- 	</div>
+	
+	<%= partial(:header) %>
 
  	<div class="row">
  		<div class="col-sm-6 col-xs-12">
